bk_ida/gccida/g2/rm_line_notes
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1646:1: error: must use 'enum' tag to refer to type 'debug_info_type'
debug_info_type v4; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1648:4: error: expected ';' after expression
rtx v7; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1648:5: error: use of undeclared identifier 'v7'
rtx v7; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1650:4: error: expected ';' after expression
rtx v9; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1650:5: error: use of undeclared identifier 'v9'
rtx v9; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1658:1: error: use of undeclared identifier 'v7'
v7 = head; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1661:20: error: use of undeclared identifier 'v7'
while ( *( _WORD *)v7 != 37 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1663:1: error: use of undeclared identifier 'v7'
v7 = v7[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1663:6: error: use of undeclared identifier 'v7'
v7 = v7[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1664:13: error: use of undeclared identifier 'v7'
if ( rtx == v7 ) 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1667:26: error: use of undeclared identifier 'v7'
v8 = (  struct rtx_def *)v7[1]; 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1668:1: error: use of undeclared identifier 'v9'
v9 = v7; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1668:6: error: use of undeclared identifier 'v7'
v9 = v7; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1671:7: error: use of undeclared identifier 'v9'
v10 = v9; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1672:1: error: use of undeclared identifier 'v9'
v9 = v9[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1672:6: error: use of undeclared identifier 'v9'
v9 = v9[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1679:13: error: use of undeclared identifier 'v9'
if ( rtx == v9 ) 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1682:17: error: use of undeclared identifier 'v9'
if ( *( _WORD *)v9 != 37 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/haifa-sched.c:1686:33: error: use of undeclared identifier 'v9'
v8[1].fld[0].rtwint = ( __int64)v9; 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_line_notes/src/obj/haifa-sched.o] Error 1
